test_data/pos/ss/652620/Windows/652620.ss3.rtf
#DeepConCNF_SS3: three-class secondary structure prediction results 
#probabilities are in the order of H E C, the 3 secondary structure types used in DSSP 
   1 M C   0.001 0.000 0.999 
   2 I C   0.180 0.003 0.817 
   3 S C   0.357 0.005 0.638 
   4 T H   0.687 0.008 0.304 
   5 A H   0.739 0.012 0.248 
   6 L H   0.673 0.010 0.317 
   7 K H   0.575 0.005 0.420 
   8 Q C   0.476 0.006 0.518 
   9 A C   0.354 0.006 0.640 
  10 D C   0.320 0.002 0.678 
  11 S C   0.374 0.002 0.624 
  12 I H   0.965 0.001 0.034 
  13 E H   0.978 0.000 0.022 
  14 Q H   0.976 0.000 0.024 
  15 V H   0.984 0.001 0.015 
  16 V H   0.981 0.001 0.017 
  17 Q H   0.984 0.001 0.015 
  18 I H   0.981 0.001 0.018 
  19 I H   0.973 0.002 0.025 
  20 D H   0.899 0.001 0.099 
  21 N C   0.289 0.000 0.710 
  22 G C   0.039 0.000 0.960 
  23 G C   0.023 0.001 0.976 
  24 T C   0.027 0.002 0.971 
  25 A C   0.032 0.005 0.963 
  26 Q C   0.029 0.004 0.967 
  27 H C   0.028 0.003 0.969 
  28 G C   0.030 0.002 0.969 
  29 P H   0.767 0.001 0.232 
  30 E H   0.832 0.001 0.167 
  31 E H   0.861 0.001 0.138 
  32 I H   0.924 0.001 0.075 
  33 A H   0.961 0.001 0.038 
  34 G H   0.964 0.000 0.036 
  35 Q H   0.978 0.000 0.022 
  36 Y H   0.991 0.000 0.009 
  37 A H   0.995 0.000 0.004 
  38 Y H   0.996 0.000 0.003 
  39 L H   0.996 0.000 0.003 
  40 V H   0.990 0.000 0.010 
  41 M H   0.961 0.000 0.039 
  42 L H   0.744 0.000 0.255 
  43 H C   0.432 0.001 0.567 
  44 Q C   0.086 0.005 0.909 
  45 K C   0.053 0.006 0.941 
  46 T C   0.032 0.024 0.944 
  47 V C   0.040 0.034 0.926 
  48 D C   0.041 0.007 0.952 
  49 K H   0.738 0.001 0.261 
  50 Q H   0.768 0.002 0.230 
  51 A H   0.746 0.002 0.252 
  52 V H   0.715 0.004 0.281 
  53 K H   0.674 0.011 0.314 
  54 K H   0.608 0.006 0.385 
  55 P H   0.637 0.006 0.357 
  56 L H   0.922 0.001 0.077 
  57 D H   0.920 0.001 0.078 
  58 D H   0.928 0.001 0.071 
  59 L H   0.922 0.001 0.078 
  60 M H   0.889 0.001 0.110 
  61 S H   0.826 0.003 0.172 
  62 Q C   0.201 0.001 0.798 
  63 G C   0.081 0.001 0.918 
  64 A C   0.081 0.005 0.915 
  65 M C   0.108 0.043 0.849 
  66 F C   0.122 0.075 0.803 
  67 D C   0.106 0.018 0.876 
  68 Y H   0.936 0.000 0.064 
  69 D H   0.974 0.000 0.025 
  70 L H   0.984 0.000 0.016 
  71 A H   0.991 0.000 0.009 
  72 L H   0.994 0.001 0.005 
  73 Q H   0.995 0.000 0.005 
  74 Q H   0.991 0.000 0.008 
  75 A H   0.989 0.000 0.010 
  76 E H   0.986 0.001 0.014 
  77 N H   0.971 0.001 0.028 
  78 L H   0.941 0.002 0.058 
  79 L H   0.894 0.002 0.104 
  80 L H   0.792 0.002 0.206 
  81 N H   0.662 0.002 0.336 
  82 L H   0.605 0.006 0.389 
  83 V H   0.527 0.015 0.458 
  84 E C   0.212 0.009 0.779 
  85 T C   0.001 0.000 0.999 
