test_data/neg/ss/655286/Windows/655286.ss3.rtf
#DeepConCNF_SS3: three-class secondary structure prediction results 
#probabilities are in the order of H E C, the 3 secondary structure types used in DSSP 
   1 M C   0.000 0.001 0.999 
   2 K C   0.005 0.093 0.902 
   3 L C   0.016 0.303 0.681 
   4 L C   0.023 0.374 0.604 
   5 T C   0.029 0.412 0.560 
   6 H E   0.034 0.558 0.408 
   7 V E   0.029 0.552 0.420 
   8 C C   0.025 0.429 0.546 
   9 H C   0.039 0.343 0.618 
  10 Y C   0.048 0.361 0.592 
  11 C C   0.055 0.362 0.583 
  12 S C   0.086 0.385 0.529 
  13 F E   0.135 0.458 0.407 
  14 S E   0.181 0.490 0.328 
  15 F E   0.219 0.493 0.288 
  16 F E   0.228 0.489 0.284 
  17 T E   0.230 0.463 0.307 
  18 R C   0.216 0.355 0.429 
  19 K C   0.243 0.214 0.543 
  20 F C   0.276 0.121 0.603 
  21 D C   0.255 0.106 0.638 
  22 V C   0.296 0.160 0.544 
  23 F C   0.277 0.178 0.544 
  24 G C   0.236 0.162 0.602 
  25 A C   0.246 0.189 0.565 
  26 I C   0.216 0.245 0.539 
  27 T C   0.156 0.244 0.600 
  28 K C   0.085 0.194 0.721 
  29 K C   0.034 0.152 0.814 
  30 D C   0.011 0.169 0.820 
  31 T C   0.001 0.240 0.758 
  32 P C   0.001 0.292 0.707 
  33 V E   0.002 0.894 0.104 
  34 V E   0.002 0.961 0.038 
  35 F E   0.001 0.899 0.100 
  36 C C   0.001 0.322 0.677 
  37 P C   0.016 0.039 0.945 
  38 T C   0.024 0.020 0.956 
  39 C C   0.034 0.027 0.938 
  40 G C   0.028 0.018 0.954 
  41 N C   0.039 0.034 0.927 
  42 Q C   0.045 0.109 0.846 
  43 S C   0.053 0.353 0.594 
  44 L E   0.058 0.578 0.364 
  45 S E   0.062 0.662 0.276 
  46 V E   0.081 0.604 0.315 
  47 S C   0.088 0.380 0.533 
  48 H C   0.086 0.249 0.665 
  49 I C   0.083 0.277 0.641 
  50 E C   0.096 0.363 0.541 
  51 E C   0.094 0.398 0.508 
  52 E C   0.069 0.312 0.619 
  53 I C   0.019 0.106 0.875 
  54 R C   0.000 0.001 0.999 
